--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "0.1.14",
     "dayjs": "^1.10.4",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "raw.macro": "^0.4.2",
     "react": "^17.0.1",
@@ -40,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "gh-pages": "^3.2.3",
+    "sass": "^1.49.7",
     "source-map-explorer": "^2.5.2"
   },
   "browserslist": {
