replace font awesome with react icons

--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "analyze": "npm run build && source-map-explorer build/static/js/*.chunk.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "0.1.14",
     "dayjs": "^1.10.4",
     "prop-types": "^15.7.2",
     "raw.macro": "^0.4.2",
@@ -24,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-helmet-async": "^1.0.7",
+    "react-icons": "^4.3.1",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
